deploy/kubernetes/open-faas-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: magda
  labels:
    role: openfaas-system
    access: openfaas-system
    istio-injection: enabled
---
apiVersion: v1
kind: Namespace
metadata:
  name: openfaas-fn
  labels:
    istio-injection: enabled
    role: openfaas-fn
