deploy/kubernetes/local.yml
#API
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: api
    spec:
      containers:
      - name: api
        resources:
          requests:
            memory: 0
        image: "localhost:5000/data61/magda-metadata-local:latest"
        command: ["sbt", "~searchApi/re-start"]
        imagePullPolicy: Always
        ports:
        - containerPort: 80
        - containerPort: 8000
        volumeMounts:
        - mountPath: /usr/regions
          name: regions
        - mountPath: /usr/src/app/
          name: src
        - mountPath: /root/.ivy2/
          name: ivy-cache
      volumes:
      - name: regions
        hostPath:
          path: ${projectDir}/indexer/regions
      - name: src
        hostPath:
          path: ${projectDir}
      - hostPath:
          path: ${homeDir}/.ivy2/
        name: ivy-cache
---
apiVersion: v1
kind: Service
metadata:
  name: api
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30009
  - name: debug
    port: 8000
    targetPort: 8000
    nodePort: 30080
  selector:
    service: api
  type: "NodePort"
---
# Indexer
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: indexer
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: indexer
    spec:
      containers:
      - name: api
        resources:
          requests:
            memory: 0
        image: "localhost:5000/data61/magda-metadata-local:latest"
        command: ["sbt", "-DincludeMockData=true", "~indexer/re-start"]
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
        volumeMounts:
        - mountPath: /usr/regions
          name: regions
        - mountPath: /usr/src/app/
          name: src
        - mountPath: /root/.ivy2/
          name: ivy-cache
      volumes:
      - name: regions
        hostPath:
          path: ${projectDir}/regions
      - name: src
        hostPath:
          path: ${projectDir}
      - hostPath:
          path: ${homeDir}/.ivy2/
        name: ivy-cache
---
apiVersion: v1
kind: Service
metadata:
  name: indexer
spec:
  ports:
  - name: debug
    port: 8000
    targetPort: 8000
    nodePort: 30081
  selector:
    service: indexer
  type: "NodePort"
---
# ElasticSearch
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: es
  labels:
    component: elasticsearch
spec:
  template:
    metadata:
      labels:
        component: elasticsearch
    spec:
      containers:
      - name: es
        resources:
          requests:
            memory: 1000Mi
          limits:
            memory: 2000Mi
        securityContext:
          privileged: true
          capabilities:
            add:
              - IPC_LOCK
        image: localhost:5000/data61/elasticsearch-kubernetes:2.4.1
        ports:
        - containerPort: 9200
          name: http
          protocol: TCP
        - containerPort: 9300
          name: transport
          protocol: TCP
        volumeMounts:
        - name: storage
          mountPath: /data
        - name: snapshots
          mountPath: /snapshots
      volumes:
      - name: snapshots
        hostPath:
          path: ${projectDir}/snapshots
      - name: "storage"
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch
  labels:
    component: elasticsearch
spec:
  ports:
  - name: http
    port: 9200
    targetPort: 9200
    nodePort: 30092
  - name: java
    port: 9300
    targetPort: 9300
    nodePort: 30093
  selector:
    component: elasticsearch
  type: "NodePort"
---
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-discovery
  labels:
    component: elasticsearch
spec:
  selector:
    component: elasticsearch
  ports:
  - name: transport
    port: 9300
    protocol: TCP
---
# KIBANA
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: kibana
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: kibana
    spec:
      containers:
      - env:
        - name: ELASTICSEARCH_URL
          value: http://elasticsearch:9200
        image: seeruk/docker-kibana-sense
        resources:
          limits:
            memory: 500Mi
        name: kibana
        ports:
        - containerPort: 5601
---
apiVersion: v1
kind: Service
metadata:
  name: kibana
spec:
  ports:
  - name: main
    port: 5601
    targetPort: 5601
    nodePort: 30056
  selector:
    service: kibana
  type: "NodePort"
