deploy/kubernetes/registry-datastore.yml
# Postgres for the Registry
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry-datastore
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: registry-datastore
    spec:
      containers:
      - name: registry-datastore
        image: localhost:5000/data61/registry-datastore:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: registrydata
      volumes:
      - name: registrydata
        hostPath:
          path: /tmp/registrydata
---
apiVersion: v1
kind: Service
metadata:
  name: registry-datastore
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    service: registry-datastore
