deploy/kubernetes/test.yml
# Registry API
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry-api
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: registry-api
    spec:
      containers:
      - name: registry-api
        resources:
          requests:
            memory: 0
        image: "localhost:5000/data61/magda-registry-api:latest"
---
apiVersion: v1
kind: Service
metadata:
  name: registry-api
spec:
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30010
  - name: debug
    port: 8000
    targetPort: 8000
    nodePort: 30100
  selector:
    service: registry-api
  type: "NodePort"
---
# Postgres for the Registry
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: registry-datastore
spec:
  replicas: 1
  template:
    metadata:
      labels:
        service: registry-datastore
    spec:
      containers:
      - name: registry-datastore
        image: localhost:5000/data61/registry-datastore:latest
        ports:
        - containerPort: 5432
        volumeMounts:
        - mountPath: /var/lib/postgresql/data
          name: registrydata
      volumes:
      - name: registrydata
        hostPath:
          path: /tmp/registrydata
---
apiVersion: v1
kind: Service
metadata:
  name: registry-datastore
spec:
  ports:
  - name: postgres
    port: 5432
    targetPort: 5432
  selector:
    service: registry-datastore
